--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,19 @@ services:
     networks:
       - event-manager-network
     restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: @Secret123#$%
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: @Secret123#$%
+      ME_CONFIG_MONGODB_URL: mongodb://root:@Secret123#$%@mongo:27017/
 
   prod:
     container_name: event_manager_prod
